# helloworld

./: .gitignore  README.md  helloworld.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/helloworld/: __init__.py  main.py
tests/: __init__.py  test_main.py
